# a0-angular

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  good-first-issue.yml
.github/workflows/: ci.yml  codeql.yml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/demo/: demo_controller.py  demo_service.py
apps/api/tests/: test_demo_start_integration.py  test_health.py
apps/web/: .browserslistrc  .dockerignore  .prettierrc.json  Dockerfile  README.md  angular.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
apps/web/src/: index.html  styles.scss
apps/web/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
apps/web/src/app/pages/: home.component.ts
docs/: architecture.md
docs/adr/: 0000-template.md  0001-stack.md  0002-byok.md  0003-license.md
scripts/: seed-github-issues.py
